# nablaDFT

./: .gitignore  .pre-commit-config.yaml  LICENSE  MANIFEST.in  PAINN_example.ipynb  README.md  TODO.md  generate_delta_dataset.py  playground.ipynb  pyproject.toml  pytest.ini  run.py  setup.py
config/: dimenetplusplus.yaml  equiformer_v2_oc20.yaml  escn-oc.yaml  fluoro-escn-oc.yaml  fluoro-painn-oc.yaml  fluoro-painn-oc_predict.yaml  gemnet-oc.yaml  gemnet-oc_optim.yaml  gemnet-oc_predict.yaml  gemnet-oc_test.yaml  graphormer3d.yaml  graphormer3d_test.yaml  painn-oc.yaml  painn.yaml  pcqm4mv2-painn-oc.yaml  pubchemqc-escn-oc.yaml  pubchemqc-gemnet-oc.yaml  pubchemqc-painn-oc.yaml  qhnet.yaml  schnet.yaml  schnet_optim.yaml  schnet_test.yaml
config/calculator/: pyg_calculator.yaml  spk_calculator.yaml
config/callbacks/: callbacks_spk.yaml  default.yaml
config/datamodule/: fluoro_pyg.yaml  nablaDFT_ase.yaml  nablaDFT_ase_test.yaml  nablaDFT_hamiltonian.yaml  nablaDFT_hamiltonian_test.yaml  nablaDFT_pyg.yaml  nablaDFT_pyg_test.yaml  pcqm4mv2_pyg.yaml  pubchemqc_pyg.yaml
config/loggers/: wandb.yaml
config/model/: dimenetplusplus.yaml  (+15 more)
examples/: 0a_basic_access.ipynb  1a_meta_information.ipynb  GemNet-OC_example.ipynb  Geometry Optimization.ipynb  Inference example.ipynb  PAINN_example.ipynb  moses_7570.xyz
nablaDFT/: README.md  __init__.py  base.py  base_model.py  callbacks.py  model_registry.py  pipelines.py  registry.py  registry_model.py  schedulers.py  utils.py
requirements/: requirements-dev.txt
tests/: README.md  configs.py  conftest.py  decorators.py
(+236 files in other folders)
