[project]
name="nablaDFT"
authors=["AIRI"]
license="MIT"
requires-python = ">=3.9"
version="2.0.0alpha"

[tool.ruff]
src = ["nablaDFT"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".ipynb_checkpoints",
    ".ruff_cache",
    ".venv",
    ".vscode",
    "build",
    "dist",
    "site-packages",
    "venv",
    "nablaDFT/phisnet",
    "nablaDFT/tests"
]
extend-include = ["*.ipynb"]
line-length = 120
indent-width = 4

[tool.ruff.lint]
select = ["F", "E", "W", "I", "N", "D", "A", "T", "PL", "NPY"]
ignore = ["D107", "D102", "D100", "N999", "PLR5501"]
fixable = ["ALL"]
unfixable = ["F401"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]
"**/{tests,docs,tools}/*" = ["E402"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true
docstring-code-line-length = "dynamic"